...
    <string name="fragment_shelf_frontal_shelfonly_icon_focused">Icon to signal the currently selected shelf compartment.</string>




    <!-- //FILTERFRAGMENT// -->
    <string name="filterFragment_filterHeader">Filter</string>

    <string name="filterFragment_submitButton">Filtern</string>

    <!-- TextView's -->
    <string name="filterFragment_textView_articleId">Artikel Nr</string>
    <string name="filterFragment_textView_articleShortDescription">Kurzbez.</string>
...
    <string name="filterFragment_iconDescription_misc">Icon for Miscellaneous Searchattributes</string>
    <string name="filterFragment_iconDescription_color">Icon for Color Searchattributes</string>
    <string name="filterFragment_iconDescription_article">Icon for Article Searchattributes</string>



    <string name="settingsFragment_textView_pageCaption">Einstellungen</string>
    <string name="settingsFragment_textView_databaseCaption">Datenbank</string>

    <string name="settingsFragment_textView_database">Datenbank</string>
    <string name="settingsFragment_textView_datapool">Datenbestand</string>
    <string name="settingsFragment_textView_refresh">aktualisieren</string>
    <string name="settingsFragment_textView_loadFromServer">vom Server laden</string>
...

    <string name="activity_login_username">Benutzername</string>
    <string name="activity_login_password">Passwort</string>
    <string name="activity_login_header">Login</string>
    <string name="activity_login_loginButton">Login</string>

    <string name="menu_sidenav_home">Lageransicht</string>
    <string name="menu_sidenav_filter">Filter</string>
    <string name="menu_sidenav_search">Suche</string>
    <string name="menu_sidenav_kpis">KPI\'s</string>
    <string name="menu_sidenav_info">Info</string>
    <string name="menu_sidenav_settings">Einstellungen</string>
    <string name="menu_sidenav_log_out">Ausloggen</string>

</resources>

