<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_view_test"
    tools:context="de.lingen.hsosna.texview.MainActivity"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_sidenav_home" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/menu_sidenav_filter" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_sidenav_search" />
        <item
            android:id="@+id/nav_kpi"
            android:icon="@drawable/ic_kpi"
            android:title="@string/menu_sidenav_kpis" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_sidenav_info" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_sidenav_settings" />

    </group>
    <group
        android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sidenav_log_out" />
    </group>
</menu>
